--- a/index.html
+++ b/index.html
@@ -2,125 +2,128 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML Tags Showcase</title>
+    <title style="color: purple;">HTML Tags Showcase</title>
 </head>
-<body>
+<body style="font-family: Arial, sans-serif; background-color: #f0f8ff; color: #333;">
 
-    <header>
-        <h1>Welcome to HTML Tag Demo Page</h1>
-        <nav>
-            <a href="#text">Text Tags</a> |
-            <a href="#media">Media</a> |
-            <a href="#lists">Lists</a> |
-            <a href="#table">Table</a> |
-            <a href="#form">Form</a>
+    <header style="background-color: #4CAF50; color: white; padding: 10px; border: 2px solid #388E3C;">
+        <h1 style="margin: 0;">Welcome to HTML Tag Demo Page</h1>
+        <nav style="margin-top: 10px;">
+            <a href="#text" style="color: white; margin-right: 10px; text-decoration: underline;">Text Tags</a>
+            <a href="#media" style="color: white; margin-right: 10px;">Media</a>
+            <a href="#lists" style="color: white; margin-right: 10px;">Lists</a>
+            <a href="#table" style="color: white; margin-right: 10px;">Table</a>
+            <a href="#form" style="color: white;">Form</a>
         </nav>
-        <hr>
+        <hr style="border: 1px dashed white;">
     </header>
 
-    <section id="text">
-        <h2>Text Formatting Tags</h2>
-        <p>This is a <strong>strong</strong> word, and this is <em>emphasized</em>.</p>
-        <p><u>Underlined</u>, <del>deleted</del>, <ins>inserted</ins>, <mark>highlighted</mark>, <small>small</small></p>
-        <pre>
+    <section id="text" style="padding: 15px; border: 1px solid #ccc; margin: 10px;">
+        <h2 style="color: #e91e63;">Text Formatting Tags</h2>
+        <p style="font-size: 16px;">This is a <strong style="color: red;">strong</strong> word, and this is <em style="color: blue;">emphasized</em>.</p>
+        <p><u style="text-decoration-color: green;">Underlined</u>, 
+           <del style="color: gray;">deleted</del>, 
+           <ins style="text-decoration: underline double;">inserted</ins>, 
+           <mark style="background-color: yellow;">highlighted</mark>, 
+           <small style="font-size: 10px;">small</small></p>
+        <pre style="background-color: #eee; padding: 10px; border: 1px solid #ccc;">
 This is preformatted text.
     Indentation and spacing are preserved.
         </pre>
-        <p>Inline code: <code>console.log("Hello, world!");</code></p>
-        <h3>Heading 3</h3>
-        <h4>Heading 4</h4>
-        <h5>Heading 5</h5>
-        <h6>Heading 6</h6>
+        <p style="margin-top: 10px;">Inline code: <code style="background-color: #f4f4f4; border: 1px solid #ccc; padding: 2px;">console.log("Hello, world!");</code></p>
+        <h3 style="color: #673ab7;">Heading 3</h3>
+        <h4 style="color: #009688;">Heading 4</h4>
+        <h5 style="color: #795548;">Heading 5</h5>
+        <h6 style="color: #3f51b5;">Heading 6</h6>
     </section>
 
-    <section id="media">
-        <h2>Media Elements</h2>
+    <section id="media" style="padding: 15px; border: 1px solid #ccc; margin: 10px;">
+        <h2 style="color: #ff9800;">Media Elements</h2>
         <p>Image:</p>
-        <img src="https://via.placeholder.com/150" alt="Sample Image">
+        <img src="https://via.placeholder.com/150" alt="Sample Image" style="border: 2px solid black; padding: 5px;">
         <p>Audio:</p>
-        <audio controls>
+        <audio controls style="background-color: #f7f7f7; border: 1px solid #aaa;">
             <source src="sample.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <p>Video:</p>
-        <video width="320" height="240" controls>
+        <video width="320" height="240" controls style="border: 2px solid #666;">
             <source src="sample.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
 
-    <section id="lists">
-        <h2>List Types</h2>
-        <h3>Unordered List</h3>
-        <ul>
+    <section id="lists" style="padding: 15px; border: 1px solid #ccc; margin: 10px;">
+        <h2 style="color: #03a9f4;">List Types</h2>
+        <h3 style="color: #607d8b;">Unordered List</h3>
+        <ul style="list-style-type: square; color: green;">
             <li>Item A</li>
             <li>Item B</li>
             <li>Item C</li>
         </ul>
 
-        <h3>Ordered List</h3>
-        <ol>
+        <h3 style="color: #607d8b;">Ordered List</h3>
+        <ol style="color: darkblue;">
             <li>First</li>
             <li>Second</li>
             <li>Third</li>
         </ol>
 
-        <h3>Description List</h3>
-        <dl>
-            <dt>HTML</dt>
+        <h3 style="color: #607d8b;">Description List</h3>
+        <dl style="color: darkred;">
+            <dt style="font-weight: bold;">HTML</dt>
             <dd>HyperText Markup Language</dd>
-            <dt>CSS</dt>
+            <dt style="font-weight: bold;">CSS</dt>
             <dd>Cascading Style Sheets</dd>
         </dl>
     </section>
 
-    <section id="table">
-        <h2>Table Example</h2>
-        <table border="1">
+    <section id="table" style="padding: 15px; border: 1px solid #ccc; margin: 10px;">
+        <h2 style="color: #9c27b0;">Table Example</h2>
+        <table border="1" style="border-collapse: collapse; width: 60%;">
             <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Age</th>
+                <tr style="background-color: #f2f2f2;">
+                    <th style="border: 1px solid #000; padding: 8px;">Name</th>
+                    <th style="border: 1px solid #000; padding: 8px;">Age</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Alice</td>
-                    <td>24</td>
+                    <td style="border: 1px solid #000; padding: 8px;">Alice</td>
+                    <td style="border: 1px solid #000; padding: 8px;">24</td>
                 </tr>
                 <tr>
-                    <td>Bob</td>
-                    <td>30</td>
+                    <td style="border: 1px solid #000; padding: 8px;">Bob</td>
+                    <td style="border: 1px solid #000; padding: 8px;">30</td>
                 </tr>
             </tbody>
         </table>
     </section>
 
-    <section id="form">
-        <h2>Form Elements</h2>
-        <form action="#">
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name"><br><br>
+    <section id="form" style="padding: 15px; border: 1px solid #ccc; margin: 10px;">
+        <h2 style="color: #ff5722;">Form Elements</h2>
+        <form action="#" style="border: 1px solid #999; padding: 10px; background-color: #f9f9f9;">
+            <label for="name" style="color: #0000cc;">Name:</label><br>
+            <input type="text" id="name" name="name" style="margin-bottom: 10px; border: 1px solid #ccc;"><br>
 
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="4" cols="30"></textarea><br><br>
+            <label for="message" style="color: #0000cc;">Message:</label><br>
+            <textarea id="message" name="message" rows="4" cols="30" style="margin-bottom: 10px; border: 1px solid #ccc;"></textarea><br>
 
-            <label for="gender">Gender:</label>
-            <select id="gender" name="gender">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
+            <label for="gender" style="color: #0000cc;">Gender:</label>
+            <select id="gender" name="gender" style="margin-bottom: 10px;">
+                <option value="male" style="color: blue;">Male</option>
+                <option value="female" style="color: pink;">Female</option>
+                <option value="other" style="color: purple;">Other</option>
             </select><br><br>
 
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" style="background-color: #4CAF50; color: white; border: none; padding: 8px 16px;">
         </form>
     </section>
 
-    <footer>
-        <hr>
-        <p>&copy; 2025 HTML Tag Demo. All rights reserved.</p>
+    <footer style="background-color: #222; color: white; padding: 10px; text-align: center;">
+        <hr style="border: 1px solid white;">
+        <p style="margin: 0;">&copy; 2025 HTML Tag Demo. All rights reserved.</p>
     </footer>
 
 </body>
 </html>
-
