--- a/index.html
+++ b/index.html
@@ -1,25 +1,126 @@
-            <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Centered Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body, html {
-      height: 100%;
-      margin: 0;
-    }
-  </style>
+    <meta charset="UTF-8">
+<metaname="viewport" content ="width=device-width,initial-scale=1.8"/>
+    <title>HTML Tags Showcase</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" >
 </head>
-<body>
-  <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <div class="text-center">
-      <h1>Hello, world!</h1>
-      <p>This content is centered both vertically and horizontally.</p>
-    </div>
-  </div>
+<body class="bg light">
+    <header class="bg-primary
+        <h1>Welcome to HTML Tag Demo Page</h1>
+        <nav>
+            <a href="#text">Text Tags</a> |
+            <a href="#media">Media</a> |
+            <a href="#lists">Lists</a> |
+            <a href="#table">Table</a> |
+            <a href="#form">Form</a>
+        </nav>
+        <hr>
+    </header>
+
+    <section id="text">
+        <h2>Text Formatting Tags</h2>
+        <p>This is a <strong>strong</strong> word, and this is <em>emphasized</em>.</p>
+        <p><u>Underlined</u>, <del>deleted</del>, <ins>inserted</ins>, <mark>highlighted</mark>, <small>small</small></p>
+        <pre>
+This is preformatted text.
+    Indentation and spacing are preserved.
+        </pre>
+        <p>Inline code: <code>console.log("Hello, world!");</code></p>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+        <h6>Heading 6</h6>
+    </section>
+
+    <section id="media">
+        <h2>Media Elements</h2>
+        <p>Image:</p>
+        <img src="https://via.placeholder.com/150" alt="Sample Image">
+        <p>Audio:</p>
+        <audio controls>
+            <source src="sample.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+        <p>Video:</p>
+        <video width="320" height="240" controls>
+            <source src="sample.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </section>
+
+    <section id="lists">
+        <h2>List Types</h2>
+        <h3>Unordered List</h3>
+        <ul>
+            <li>Item A</li>
+            <li>Item B</li>
+            <li>Item C</li>
+        </ul>
+
+        <h3>Ordered List</h3>
+        <ol>
+            <li>First</li>
+            <li>Second</li>
+            <li>Third</li>
+        </ol>
+
+        <h3>Description List</h3>
+        <dl>
+            <dt>HTML</dt>
+            <dd>HyperText Markup Language</dd>
+            <dt>CSS</dt>
+            <dd>Cascading Style Sheets</dd>
+        </dl>
+    </section>
+
+    <section id="table">
+        <h2>Table Example</h2>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Alice</td>
+                    <td>24</td>
+                </tr>
+                <tr>
+                    <td>Bob</td>
+                    <td>30</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section id="form">
+        <h2>Form Elements</h2>
+        <form action="#">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name"><br><br>
+
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" cols="30"></textarea><br><br>
+
+            <label for="gender">Gender:</label>
+            <select id="gender" name="gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+            </select><br><br>
+
+            <input type="submit" value="Submit">
+        </form>
+    </section>
+
+    <footer>
+        <hr>
+        <p>&copy; 2025 HTML Tag Demo. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
-
-
